; ModuleID = '/home/carl/AnghaBench/tengine/src/http/modules/perl/extr_ngx_http_perl_module.c_ngx_http_perl_exit.c'
source_filename = "/home/carl/AnghaBench/tengine/src/http/modules/perl/extr_ngx_http_perl_module.c_ngx_http_perl_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@nginx_stash = common dso_local global i64 0, align 8
@NGX_LOG_DEBUG_HTTP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"perl term\00", align 1
@perl = common dso_local global i32 0, align 4
@ngx_perl_term = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @ngx_http_perl_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ngx_http_perl_exit(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load i64, i64* @nginx_stash, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %16

5:                                                ; preds = %1
  %6 = load i32, i32* @NGX_LOG_DEBUG_HTTP, align 4
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @ngx_log_debug0(i32 %6, i32 %9, i32 0, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @perl, align 4
  %12 = call i32 @perl_destruct(i32 %11)
  %13 = load i32, i32* @perl, align 4
  %14 = call i32 @perl_free(i32 %13)
  %15 = call i32 (...) @PERL_SYS_TERM()
  br label %16

16:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @ngx_log_debug0(i32, i32, i32, i8*) #1

declare dso_local i32 @perl_destruct(i32) #1

declare dso_local i32 @perl_free(i32) #1

declare dso_local i32 @PERL_SYS_TERM(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
